--- a/css/style2.css
+++ b/css/style2.css
@@ -99,6 +99,30 @@ p {
     font-size: 18px;
 }
 
+  a:link {
+    text-decoration: none;
+    
+  }
+  
+  a:visited {
+    text-decoration: none;
+    color: #2B2B2B;
+
+  }
+  
+  a:hover {
+    text-decoration: underline;
+    color: #7C7C79;
+
+    
+
+  }
+  
+  a:active {
+    text-decoration: none;
+    background-color: #2B2B2B;
+  }
+
 @media only screen and (max-width: 600px) {
     .left, .right {
         text-align: center;
