--- a/css/style3.css
+++ b/css/style3.css
@@ -97,6 +97,44 @@ h4{
     margin: 0%;
 }
 
+.button {
+    background-color: #FAF8F4;
+    color: #2B2B2B;
+    border: 2px #2B2B2B solid;
+    font-size: 20px;
+    letter-spacing: 2px;
+    width: 340px;
+    height: 50px;
+    align-content: center;
+    text-align: center;
+    font-family: "TS Block";
+  }
+
+  a:link {
+    text-decoration: none;
+    
+  }
+  
+  a:visited {
+    text-decoration: none;
+    color: #2B2B2B;
+
+  }
+  
+  a:hover {
+    text-decoration: underline;
+    color: #7C7C79;
+
+    
+
+  }
+  
+  a:active {
+    text-decoration: none;
+    background-color: #2B2B2B;
+  }
+
+
 p{
     font-size: 18px;
     margin: 0%;
